toList not supported by java 8 so refactored